--- a/src/assets/myntraAdmin.css
+++ b/src/assets/myntraAdmin.css
@@ -1,3 +1,8 @@
+/* Carousel dot color override */
+.admin-myntra .MuiCarousel-indicator, .admin-myntra .MuiCarousel-indicators button {
+  background-color: #f7c873 !important;
+  border: none !important;
+}
 /* Myntra-inspired admin UI styles */
 
 
